Fixed alignment for member cards

--- a/Chroma/css/styles.css
+++ b/Chroma/css/styles.css
@@ -101,16 +101,21 @@ footer p {
 /* Member card styles */
 
 .member_bios {
-    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
     text-align: center;
-    background-color: #454545;
-    border-radius: 20px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .member_bios_element {
+    margin: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    text-align: center;
+    background-color: #454545;
+    border-radius: 20px;
 }
 
 .member_bios_element h2 {
